# ChangeLog for dev-python/ipwhois
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ipwhois-0.9.0 (31 Jul 2014)

  31 Jul 2014; Johann Schmitz <ercpe@gentoo.org> +ipwhois-0.9.0.ebuild,
  +metadata.xml:
  Ebuild for ipwhois